--- a/im_huuuungry/package.json
+++ b/im_huuuungry/package.json
@@ -8,6 +8,8 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-firebase/app": "^6.3.4",
+    "@react-native-firebase/auth": "^6.3.4",
     "expo": "^35.0.0",
     "firebase": "^7.2.2",
     "react": "16.8.3",
@@ -19,7 +21,8 @@
     "react-native-status-bar-height": "^2.4.0",
     "react-native-web": "^0.11.7",
     "react-navigation": "^4.0.10",
-    "react-navigation-stack": "^1.10.2"
+    "react-navigation-stack": "^1.10.2",
+    "react-native-maps": "~0.25.0"
   },
   "devDependencies": {
     "babel-preset-expo": "^7.1.0",
