--- a/im_huuuungry/package.json
+++ b/im_huuuungry/package.json
@@ -8,21 +8,27 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@react-native-firebase/app": "^6.3.4",
-    "@react-native-firebase/auth": "^6.3.4",
+    "@firebase/auth": "^0.14.2",
+    "@firebase/firestore": "^1.13.1",
+    "base-64": "^0.1.0",
     "expo": "^35.0.0",
-    "firebase": "^7.2.2",
+    "expo-constants": "~7.0.0",
+    "expo-location": "~7.0.0",
+    "expo-permissions": "~7.0.0",
+    "firebase": "7.9.0",
     "react": "16.8.3",
     "react-dom": "16.8.3",
     "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
     "react-native-gesture-handler": "1.3.0",
+    "react-native-maps": "~0.25.0",
     "react-native-paper": "^3.0.0",
-    "react-native-screens": "^2.4.0",
+    "react-native-screens": "~1.0.0-alpha.23",
     "react-native-status-bar-height": "^2.4.0",
+    "react-native-swipe-list-view": "^2.5.0",
     "react-native-web": "^0.11.7",
     "react-navigation": "^4.0.10",
     "react-navigation-stack": "^1.10.2",
-    "react-native-maps": "~0.25.0"
+    "sort-on": "^4.1.0"
   },
   "devDependencies": {
     "babel-preset-expo": "^7.1.0",
