--- a/im_huuuungry/package.json
+++ b/im_huuuungry/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "@firebase/auth": "^0.14.2",
     "@firebase/firestore": "^1.13.1",
+    "@react-native-community/masked-view": "^0.1.7",
+    "@react-navigation/native": "^5.1.4",
     "base-64": "^0.1.0",
     "expo": "^35.0.0",
     "expo-constants": "~7.0.0",
@@ -19,10 +21,11 @@
     "react": "16.8.3",
     "react-dom": "16.8.3",
     "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
-    "react-native-gesture-handler": "1.3.0",
+    "react-native-gesture-handler": "~1.3.0",
     "react-native-maps": "~0.25.0",
     "react-native-paper": "^3.0.0",
     "react-native-screens": "~1.0.0-alpha.23",
+    "react-native-snap-carousel": "^3.9.0",
     "react-native-status-bar-height": "^2.4.0",
     "react-native-swipe-list-view": "^2.5.0",
     "react-native-web": "^0.11.7",
