--- a/im_huuuungry/package.json
+++ b/im_huuuungry/package.json
@@ -31,6 +31,7 @@
     "react-native-web": "^0.11.7",
     "react-navigation": "^4.0.10",
     "react-navigation-stack": "^1.10.2",
+    "rn-range-slider": "^1.3.2",
     "sort-on": "^4.1.0"
   },
   "devDependencies": {
